--- a/bin/main/glade/VR_Main.glade
+++ b/bin/main/glade/VR_Main.glade
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
+    <property name="window_position">center</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_top">24</property>
         <property name="resize_mode">queue</property>
         <property name="orientation">vertical</property>
         <child>
@@ -20,6 +20,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">File</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu1">
                     <property name="visible">True</property>
@@ -29,6 +30,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">New Project</property>
                       </object>
                     </child>
                     <child>
@@ -37,6 +39,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Create a new, blank document in a tab.</property>
+                        <property name="label" translatable="yes">New Blank Document</property>
                       </object>
                     </child>
                     <child>
@@ -44,6 +47,8 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="tooltip_text" translatable="yes">Creates a working window script that you can edit.</property>
+                        <property name="label" translatable="yes">New Skeleton Window Script</property>
                       </object>
                     </child>
                     <child>
@@ -52,6 +57,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Saves all documents in the tabs to disk.</property>
+                        <property name="label" translatable="yes">Save All</property>
                       </object>
                     </child>
                     <child>
@@ -60,6 +66,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Saves the current tab to a file.</property>
+                        <property name="label" translatable="yes">Save As</property>
                       </object>
                     </child>
                     <child>
@@ -68,6 +75,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Close all documents opened in the tabs.</property>
+                        <property name="label" translatable="yes">Close All</property>
                       </object>
                     </child>
                     <child>
@@ -81,6 +89,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Quit</property>
                         <signal name="activate" handler="destroy_window" swapped="no"/>
                       </object>
                     </child>
@@ -93,6 +102,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Tools</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu3">
                     <property name="visible">True</property>
@@ -103,6 +113,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Will create a .gemspec file that defines this project.  When you build your gem, it uses this file.</property>
+                        <property name="label" translatable="yes">Create Gemspec File</property>
                       </object>
                     </child>
                     <child>
@@ -111,6 +122,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Create a free account on rubygems.org so you can upload and share your gems.</property>
+                        <property name="label" translatable="yes">Start RubyGems Account</property>
                       </object>
                     </child>
                     <child>
@@ -119,6 +131,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Creates a launcher on your destop for this project.</property>
+                        <property name="label" translatable="yes">Create Desktop Launcher</property>
                       </object>
                     </child>
                     <child>
@@ -126,6 +139,7 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Global Settings</property>
                       </object>
                     </child>
                     <child>
@@ -134,6 +148,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Edit all user preferences for Visual Ruby.</property>
+                        <property name="label" translatable="yes">Project Settings</property>
                       </object>
                     </child>
                   </object>
@@ -145,6 +160,7 @@
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Help</property>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu">
                     <property name="visible">True</property>
@@ -155,6 +171,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">Visit visualruby.net for complete tutorials on using Visual Ruby</property>
+                        <property name="label" translatable="yes">Online Tutorials</property>
                       </object>
                     </child>
                     <child>
@@ -163,6 +180,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="tooltip_text" translatable="yes">This will copy exaple code into a folder named visualruby_examples in your home directory.</property>
+                        <property name="label" translatable="yes">Install Examples</property>
                       </object>
                     </child>
                   </object>
@@ -372,8 +390,8 @@
                       <object class="GtkLabel" id="labelFiles">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="yalign">0.41999998688697815</property>
                         <property name="label" translatable="yes">Files</property>
+                        <property name="yalign">0.41999998688697815</property>
                       </object>
                       <packing>
                         <property name="tab_fill">False</property>
@@ -449,8 +467,6 @@
                       <packing>
                         <property name="left_attach">0</property>
                         <property name="top_attach">0</property>
-                        <property name="width">1</property>
-                        <property name="height">1</property>
                       </packing>
                     </child>
                     <child>
@@ -465,8 +481,6 @@
                       <packing>
                         <property name="left_attach">0</property>
                         <property name="top_attach">1</property>
-                        <property name="width">1</property>
-                        <property name="height">1</property>
                       </packing>
                     </child>
                     <child>
@@ -482,8 +496,6 @@
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="top_attach">1</property>
-                        <property name="width">1</property>
-                        <property name="height">1</property>
                       </packing>
                     </child>
                     <child>
@@ -527,8 +539,6 @@
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="top_attach">0</property>
-                        <property name="width">1</property>
-                        <property name="height">1</property>
                       </packing>
                     </child>
                   </object>
@@ -612,10 +622,10 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkBox" id="scrollShell">
+                  <object class="GtkScrolledWindow" id="scrollShell">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="orientation">vertical</property>
+                    <property name="can_focus">True</property>
+                    <property name="shadow_type">in</property>
                     <child>
                       <placeholder/>
                     </child>
