--- a/bin/main/glade/VR_Main.glade
+++ b/bin/main/glade/VR_Main.glade
@@ -590,6 +590,7 @@
                   <object class="GtkBox" id="vboxTabs">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="margin_bottom">59</property>
                     <property name="orientation">vertical</property>
                     <child>
                       <placeholder/>
